deployments/deploy/openim-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-open-im-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-open-im-api
  template:
    metadata:
      labels:
        app: my-open-im-api
    spec:
      containers:
        - name: my-open-im-api-container
          image: my-open-im/my-open-im-api:v3.8.3
          volumeMounts:
            - name: my-open-im-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10002
            - containerPort: 12002
      volumes:
        - name: my-open-im-config
          configMap:
            name: my-open-im-config
