deployments/deploy/openim-crontask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-open-im-crontask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crontask
  template:
    metadata:
      labels:
        app: crontask
    spec:
      containers:
        - name: crontask-container
          image: my-open-im/my-open-im-crontask:v3.8.3
          volumeMounts:
            - name: my-open-im-config
              mountPath: "/config"
              readOnly: true
      volumes:
        - name: my-open-im-config
          configMap:
            name: my-open-im-config
