deployments/deploy/openim-msggateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messagegateway-rpc-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messagegateway-rpc-server
  template:
    metadata:
      labels:
        app: messagegateway-rpc-server
    spec:
      containers:
        - name: my-open-im-msggateway-container
          image: my-open-im/my-open-im-msggateway:v3.8.3
          volumeMounts:
            - name: my-open-im-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10140
            - containerPort: 12001
      volumes:
        - name: my-open-im-config
          configMap:
            name: my-open-im-config
