deployments/deploy/openim-msgtransfer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-open-im-msgtransfer-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-open-im-msgtransfer-server
  template:
    metadata:
      labels:
        app: my-open-im-msgtransfer-server
    spec:
      containers:
        - name: my-open-im-msgtransfer-container
          image: my-open-im/my-open-im-msgtransfer:v3.8.3
          volumeMounts:
            - name: my-open-im-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 12020
      volumes:
        - name: my-open-im-config
          configMap:
            name: my-open-im-config
