deployments/deploy/openim-push-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: push-rpc-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: push-rpc-server
  template:
    metadata:
      labels:
        app: push-rpc-server
    spec:
      containers:
        - name: push-rpc-server-container
          image: my-open-im/my-open-im-push:v3.8.3
          volumeMounts:
            - name: my-open-im-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10170
            - containerPort: 12170
      volumes:
        - name: my-open-im-config
          configMap:
            name: my-open-im-config
