deployments/deploy/openim-rpc-conversation-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conversation-rpc-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: conversation-rpc-server
  template:
    metadata:
      labels:
        app: conversation-rpc-server
    spec:
      containers:
        - name: conversation-rpc-server-container
          image: my-open-im/my-open-im-rpc-conversation:v3.8.3
          volumeMounts:
            - name: my-open-im-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10220
            - containerPort: 12220
      volumes:
        - name: my-open-im-config
          configMap:
            name: my-open-im-config
