deployments/deploy/openim-rpc-friend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friend-rpc-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: friend-rpc-server
  template:
    metadata:
      labels:
        app: friend-rpc-server
    spec:
      containers:
        - name: friend-rpc-server-container
          image: my-open-im/my-open-im-rpc-friend:v3.8.3
          volumeMounts:
            - name: my-open-im-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10240
            - containerPort: 12240
      volumes:
        - name: my-open-im-config
          configMap:
            name: my-open-im-config
