deployments/deploy/openim-rpc-group-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group-rpc-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: group-rpc-server
  template:
    metadata:
      labels:
        app: group-rpc-server
    spec:
      containers:
        - name: group-rpc-server-container
          image: my-open-im/my-open-im-rpc-group:v3.8.3
          volumeMounts:
            - name: my-open-im-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10260
            - containerPort: 12260
      volumes:
        - name: my-open-im-config
          configMap:
            name: my-open-im-config
