deployments/deploy/openim-rpc-msg-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msg-rpc-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: msg-rpc-server
  template:
    metadata:
      labels:
        app: msg-rpc-server
    spec:
      containers:
        - name: msg-rpc-server-container
          image: my-open-im/my-open-im-rpc-msg:v3.8.3
          volumeMounts:
            - name: my-open-im-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10280
            - containerPort: 12280
      volumes:
        - name: my-open-im-config
          configMap:
            name: my-open-im-config
