deployments/deploy/openim-rpc-third-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: third-rpc-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: third-rpc-server
  template:
    metadata:
      labels:
        app: third-rpc-server
    spec:
      containers:
        - name: third-rpc-server-container
          image: my-open-im/my-open-im-rpc-third:v3.8.3
          volumeMounts:
            - name: my-open-im-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10300
            - containerPort: 12300
      volumes:
        - name: my-open-im-config
          configMap:
            name: my-open-im-config
