deployments/deploy/im-cms-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: im-cms-loadbalancer
  annotations:
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-spec: "slb.s1.small"  # 阿里云SLB规格
spec:
  type: LoadBalancer
  selector:
    app: im-cms
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: im-cms-api-loadbalancer
  annotations:
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-spec: "slb.s1.small"  # 阿里云SLB规格
spec:
  type: LoadBalancer
  selector:
    app: openim-api
  ports:
    - name: api
      protocol: TCP
      port: 10002
      targetPort: 10002
