deployments/deploy/im-cms-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: im-cms-nodeport
spec:
  type: NodePort
  selector:
    app: im-cms
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: im-cms-api-nodeport
spec:
  type: NodePort
  selector:
    app: openim-api
  ports:
    - name: api
      protocol: TCP
      port: 10002
      targetPort: 10002
      nodePort: 30081
