deployments/deploy/openim-rpc-conversation-service.yml
apiVersion: v1
kind: Service
metadata:
  name: conversation-rpc-service
spec:
  selector:
    app: conversation-rpc-server
  ports:
    - name: grpc
      protocol: TCP
      port: 10220
      targetPort: 10220
    - name: prometheus
      protocol: TCP
      port: 12220
      targetPort: 12220
  type: ClusterIP
