deployments/deploy/openim-rpc-group-service.yml
apiVersion: v1
kind: Service
metadata:
  name: group-rpc-service
spec:
  selector:
    app: group-rpc-server
  ports:
    - name: grpc
      protocol: TCP
      port: 10260
      targetPort: 10260
    - name: prometheus
      protocol: TCP
      port: 12260
      targetPort: 12260
  type: ClusterIP
