deployments/deploy/openim-rpc-user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-rpc-service
spec:
  selector:
    app: user-rpc-server
  ports:
    - name: grpc
      protocol: TCP
      port: 10320
      targetPort: 10320
  type: ClusterIP
