deployments/deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-open-im-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: my-open-im-nginx
  rules:
    - http:
        paths:
          - path: /my-open-im-api
            pathType: Prefix
            backend:
              service:
                name: my-open-im-api-service
                port:
                  number: 10002
          - path: /my-open-im-msggateway
            pathType: Prefix
            backend:
              service:
                name: my-open-im-msggateway-service
                port:
                  number: 10001
